# lecropfollow

./: CONTRIBUTING.md  README.md  index.html
SKILLS/: debug.md  docker.md  integration.md  rl.md  ros.md  stack.md
docker/: ROS_noetic.dockerfile  environment.yaml
docker/config/: bashrc  entrypoint.sh
docker/scripts/: build.sh  run.sh
src/robot_description/: CMakeLists.txt  package.xml
src/robot_description/urdf/: robot.urdf.xacro
src/terra_gazebo/: CMakeLists.txt  package.xml
src/terra_gazebo/launch/: terra_gazebo.launch  world_template.launch
src/terra_utils/: CMakeLists.txt  package.xml
src/terra_utils/scripts/: perception_stub.py  rowfollow_gt.py
src/terra_worlds/models/heightmap_flat/: model.config  model.sdf
src/terra_worlds/models/heightmap_ground/: model.sdf
src/terra_worlds/models/tdmpc_120_with_gap/: model.sdf
src/terra_worlds/models/tdmpc_60_with_gap/: model.sdf
src/terra_worlds/models/tdmpc_cilinders/: model.sdf
src/terra_worlds/models/tdmpc_cilinders_with_gap/: model.sdf
src/terra_worlds/models/tdmpc_h0/: model.sdf
src/terra_worlds/models/tdmpc_h0_color/: model.sdf
src/terra_worlds/models/tdmpc_h0_color_with_gap/: model.sdf
src/terra_worlds/models/tdmpc_h1/: model.sdf
src/terra_worlds/models/tdmpc_h2/: model.sdf
src/terra_worlds/models/tdmpc_height/: model.sdf
src/terra_worlds/models/tdmpc_model/: model.sdf
src/terra_worlds/models/tdmpc_model_cl/: model.sdf
src/terra_worlds/worlds/: farm.world
static/css/: index.css
static/js/: index.js
tdmpc2/: config.yaml  tdmpc2.py  train.py
tdmpc2/common/: __init__.py  buffer.py  logger.py  math.py  parser.py  shutdown.py  world_model.py
tdmpc2/envs/: gazebo.py  multi_robot_scenario.launch
