<?xml version="1.0"?>
<package format="2">
  <name>robot_description</name>
  <version>1.0.0</version>
  <description>
    Minimal robot description for TD-MPC2 crop-following.
    Uses only standard gazebo_ros plugins — no custom C++ compilation required.
    Replace the URDF in urdf/robot.urdf.xacro to plug in your own robot.
  </description>
  <maintainer email="todo@todo.todo">maintainer</maintainer>
  <license>MIT</license>
  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>xacro</exec_depend>
</package>
