<?xml version="1.0"?>
<package format="2">
  <name>terra_gazebo</name>
  <version>1.0.0</version>
  <description>Launch files for the crop-following Gazebo simulation.</description>
  <maintainer email="todo@todo.todo">maintainer</maintainer>
  <license>MIT</license>
  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>robot_description</exec_depend>
  <exec_depend>terra_worlds</exec_depend>
  <exec_depend>terra_utils</exec_depend>
</package>
